--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     >
       <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
       <a-entity
-        gltf-model="<path-to-your-model>"
+        gltf-model="https://github.com/Parri98/Prueba-Arjs-Studio-2/blob/main/herculaneum_boat_-_roman_boat.glb"
         scale="5 5 5"
         position="50 150 0"
       >
